--- a/newcss.css
+++ b/newcss.css
@@ -1,3 +1,5 @@
+//kolor avon rgb(236,4,142)
+
 body{
     background: grey;
    }
@@ -10,4 +12,13 @@ body{
 .col-4{
     border: 1px solid black;
     background: lightyellow;
+}
+
+.PhotoSize img{
+    width:100%;
+    height:300px;
+}
+
+myClass{ 
+    background: #000;
 }
